--- a/ReTek_CarMechanical/ReTek_CarMechanical.csproj
+++ b/ReTek_CarMechanical/ReTek_CarMechanical.csproj
@@ -143,8 +143,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="SQLs\" />
+    <Content Include="SQLs\AutoIncrements.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
