--- a/ReTek_CarMechanical/ReTek_CarMechanical.csproj
+++ b/ReTek_CarMechanical/ReTek_CarMechanical.csproj
@@ -58,6 +58,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\StringValidationRule.cs" />
     <Compile Include="ViewModels\PartViewModel.cs" />
     <Compile Include="ViewModels\ServiceViewModel.cs" />
     <Compile Include="ViewModels\WorksheetViewModel.cs" />
